# abank-marketing-crew

./: .env.example  .gitignore  README.md  pyproject.toml  quick_start.py  quick_start_simple.py  requirements-minimal.txt  requirements.txt
docs/: architecture.md
src/abank_marketing_crew/: __init__.py  crew.py  main.py
src/abank_marketing_crew/config/: agents.yaml  tasks.yaml
src/abank_marketing_crew/tools/: analytics_tools.py.bak  campaign_deployment_tools.py.bak  compliance_tools.py.bak  content_generation_tools.py  crm_integration_tools.py.bak  market_research_tools.py.bak
src/abank_marketing_crew/utils/: logging_config.py  validators.py
